# airlock

./: .gitignore  LICENSE  README.md  config.example.yaml  mcp-config.json  pyproject.toml
docs/: ARCHITECTURE.md
src/airlock/: __init__.py  cli.py  client.py  gateway.py  mcp_server.py  models.py  secrets.py  secrets_daemon.py  totp_verifier.py
src/airlock/connectors/: __init__.py  calendar.py  gmail.py  icloud.py  openrouter.py
src/sag/: __init__.py  cli.py  client.py  models.py
tests/: test_gateway.py  test_gmail.py  test_totp.py  test_verifier.py
