[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sag"
version = "0.1.0"
description = "Secure Access Gateway — Human-in-the-loop access control for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Erik Cohen", email = "hello@erikcohen.dev" }
]
keywords = ["ai", "agents", "security", "totp", "access-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Communications :: Email",
]

dependencies = [
    "pyotp>=2.9.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-telegram-bot>=20.0",
    "aiosqlite>=0.19.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
sag = "sag.cli:app"

[project.urls]
Homepage = "https://github.com/ErikCohenDev/sag"
Documentation = "https://github.com/ErikCohenDev/sag/docs"
Repository = "https://github.com/ErikCohenDev/sag"
Issues = "https://github.com/ErikCohenDev/sag/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
