[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airlock"
version = "0.1.0"
description = "Secure Access Gateway — Human-in-the-loop access control for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Erik Cohen", email = "hello@erikcohen.dev" }
]
keywords = ["ai", "agents", "security", "totp", "access-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Communications :: Email",
]

dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
airlock = "airlock.cli:app"
airlock-mcp = "airlock.mcp_server:main"

[project.urls]
Homepage = "https://github.com/ErikCohenDev/airlock"
Documentation = "https://github.com/ErikCohenDev/airlock/docs"
Repository = "https://github.com/ErikCohenDev/airlock"
Issues = "https://github.com/ErikCohenDev/airlock/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/airlock"]

[tool.hatch.build.targets.sdist]
include = ["src/airlock"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
